# poc-fastapi-template-jinja2

./: .env  .gitignore  README.md  config.py  main.py  pyproject.toml
.claude/: settings.local.json
app/: admin_manager.py
app/core/: common.py
app/database/: session-prod.py  session.py
app/dependencies/: __init__.py
app/helpers/: __init__.py
app/home/: models.py
app/home/api/: __init__.py
app/home/api/routers/v1/: router.py
app/home/api/v1/: __init__.py
app/home/repository/: __init__.py
app/home/schemas/: __init__.py
app/home/tests/: __init__.py
app/home/tests/home/: __init__.py  conftest.py  test_db.py
app/lyrics/: models-refer.py  models.py
app/lyrics/api/routers/: lyrics_admin.py
app/lyrics/api/routers/v1/: router.py
app/templates/: index.html
app/templates/layout/: footer.html  main_layout.html  navbar.html
app/utils/: __init__.py  cors.py
docs/common/: __init__.md
docs/sqlalchemy/: create_manual.py  database table 구조 설계.xlsx  table.md
docs/tech/: test-conftest.md  test-scope.md
